Added icon preview

--- a/src/GNOME-Apps-Customizer/mainwindow.ui
+++ b/src/GNOME-Apps-Customizer/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>310</width>
-    <height>348</height>
+    <width>674</width>
+    <height>507</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QLineEdit" name="iconBox">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>190</y>
-      <width>131</width>
+      <x>30</x>
+      <y>350</y>
+      <width>251</width>
       <height>21</height>
      </rect>
     </property>
@@ -30,8 +30,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>160</y>
+      <x>30</x>
+      <y>320</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -43,8 +43,8 @@
    <widget class="QPushButton" name="locateIcon">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>190</y>
+      <x>290</x>
+      <y>350</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -56,8 +56,8 @@
    <widget class="QPushButton" name="locateApp">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>120</y>
+      <x>290</x>
+      <y>250</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -69,8 +69,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>90</y>
+      <x>30</x>
+      <y>220</y>
       <width>131</width>
       <height>21</height>
      </rect>
@@ -82,9 +82,9 @@
    <widget class="QLineEdit" name="appBox">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>120</y>
-      <width>131</width>
+      <x>30</x>
+      <y>250</y>
+      <width>251</width>
       <height>21</height>
      </rect>
     </property>
@@ -92,8 +92,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>20</y>
+      <x>30</x>
+      <y>130</y>
       <width>131</width>
       <height>21</height>
      </rect>
@@ -105,9 +105,9 @@
    <widget class="QLineEdit" name="nameBox">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>50</y>
-      <width>181</width>
+      <x>30</x>
+      <y>160</y>
+      <width>251</width>
       <height>21</height>
      </rect>
     </property>
@@ -115,8 +115,8 @@
    <widget class="QCheckBox" name="terminalCheckbox">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>230</y>
+      <x>30</x>
+      <y>390</y>
       <width>181</width>
       <height>23</height>
      </rect>
@@ -128,8 +128,8 @@
    <widget class="QPushButton" name="createButton">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>270</y>
+      <x>560</x>
+      <y>430</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -138,13 +138,26 @@
      <string>Create</string>
     </property>
    </widget>
+   <widget class="QLabel" name="iconImage">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>340</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>310</width>
+     <width>674</width>
      <height>22</height>
     </rect>
    </property>
