Made a fix for unavailable icons

--- a/src/GNOME-Apps-Customizer/Resources.qrc
+++ b/src/GNOME-Apps-Customizer/Resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
+        <file>Resources/org.gnome.Boxes.png</file>
         <file>Resources/question.png</file>
     </qresource>
 </RCC>
