--- a/src/GNOME-Apps-Customizer/mainwindow.ui
+++ b/src/GNOME-Apps-Customizer/mainwindow.ui
@@ -64,6 +64,11 @@
           <height>61</height>
          </rect>
         </property>
+        <property name="font">
+         <font>
+          <stylestrategy>PreferDefault</stylestrategy>
+         </font>
+        </property>
         <property name="text">
          <string/>
         </property>
